fixed layout shift issues

--- a/styles/filtered-temples.css
+++ b/styles/filtered-temples.css
@@ -97,10 +97,11 @@ main {
 }
 
 .gallery img {
+    display: block;
     width: 100%;
     height: auto;
+    aspect-ratio: 4 / 3;
     object-fit: cover;
-    display: block;
     border-radius: 1rem;
     border: 5px solid;
 }
